Bug 74553 - FILEOPEN: Contents of Several Cells Miss, if Spreadsheet is an XLS File
Summary: FILEOPEN: Contents of Several Cells Miss, if Spreadsheet is an XLS File
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: highest critical
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.1
Keywords: regression
: 74616 (view as bug list)
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-02-05 10:21 UTC by Harald Koester
Modified: 2014-06-17 21:30 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Example document in order to reproduce the bug. (229.50 KB, application/vnd.ms-excel)
2014-02-05 10:21 UTC, Harald Koester
Details
Shows the sheet, opened in LO 4.2.0.4 with OpenSUSE 12.3 64bit rpm (68.93 KB, image/png)
2014-02-05 19:05 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Koester 2014-02-05 10:21:40 UTC
Created attachment 93436 [details]
Example document in order to reproduce the bug.

Problem description: 

Steps to reproduce:
(1) Open attached document with LibreOffice versions 4.2.0 and 4.1.4.
(2) Compare document in both versions: In sheet “übersicht” the contents of the following cells miss in version 4.2.0: C3:I3, C7:I9, L2:S2, L11:S11, M29:S29, L30:S44.

Expected behavior: No missing of contents.

              
Operating System: Windows 7
Version: 4.2.0.4 release
Last worked in: 4.1.4.2 release
Comment 1 Harald Koester 2014-02-05 10:28:09 UTC
Additional info:
This bug was first reported on the German user ML by Ueli Jäggi and Karsten Börner. According Karsten the bug appears also with Win XP.
Comment 2 sophie 2014-02-05 14:56:55 UTC
I do not reproduce with Version: 4.2.0.4
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71 under Ubuntu 13.10. I display the same content than 4.1.4 under Debian, it seems that no content is missing - Left as Unconfirmed - Sophie
Comment 3 desmo 2014-02-05 17:29:48 UTC
This bug was reported from me and i testet it in Windows 7 and Windows 8.1.
Comment 4 Jochen 2014-02-05 17:41:14 UTC
Hi Sophie,

hmm... two people report the bug. You not.

How can this contradiction be resolved?

Are the steps - described by Harald - not informative enough?
Or: do you do the steps and can find no problems?
Or: is this a problem of the OS (Windwos <-> Debian)

I have added Robert:
@Robert: have you any idea?
Comment 5 Robert Großkopf 2014-02-05 19:03:58 UTC
I can confirm the buggy behavior in sheet "übersicht". 
Opening the file in LO 4.2.0.4 don't show content and no formular in this fields.
Opening the same in LO 4.1.4.2 show the content and formular.

@sophie: Do you really see the content of sheet "übersicht" in cell C3=169?

I will attach a screenshot with the missing content.
My system: OpenSUSE 12.3 64bit rpm.
Comment 6 Robert Großkopf 2014-02-05 19:05:22 UTC
Created attachment 93485 [details]
Shows the sheet, opened in LO 4.2.0.4 with OpenSUSE 12.3 64bit rpm
Comment 7 dodghz 2014-02-05 19:47:38 UTC
Hi there,
I can confirm the bug in LibreOffice Calc 4.2.0.4 on Windows 7 Pro. XLS files have the contents of some cells missing.
Comment 8 Robert Großkopf 2014-02-05 20:20:30 UTC
(In reply to comment #7)
> Hi there,
> I can confirm the bug in LibreOffice Calc 4.2.0.4 on Windows 7 Pro. XLS
> files have the contents of some cells missing.

It is wrong to set the Platform to Windows. I have confirmed it for Linux also.
If you see comment1 it appears also on WinXP - thought it isn't a 64bit-system ... So I set it back to all/all.
Comment 9 dodghz 2014-02-05 22:01:40 UTC
@robert
Huge apologies Robert. I misunderstood the bug reporting process and thought I was adding additional information to the report- not changing it.
Comment 10 Björn Michaelsen 2014-02-06 00:26:05 UTC
Just for completeness: not reproducable in 4.1.4 on Ubuntu 13.10, but reproducable on 4.2.0 on Ubuntu trusty, indeed a regression.
Comment 11 sophie 2014-02-06 09:09:26 UTC
(In reply to comment #5)
> I can confirm the buggy behavior in sheet "übersicht". 
> Opening the file in LO 4.2.0.4 don't show content and no formular in this
> fields.
> Opening the same in LO 4.1.4.2 show the content and formular.
> 
> @sophie: Do you really see the content of sheet "übersicht" in cell C3=169?

Oups, sorry, checking again this morning, I confirm that the content is missing with 4.2.0.4 Ubuntu 43.10 x64
again sorry for the wrong testing yesterday. Sophie
Comment 12 V Stuart Foote 2014-02-06 14:05:32 UTC
confirmed -- regression from 4.1.5 -> 4.2.0.4 on Windows 7 sp1, 64-bit

adding to mab4.2 as suggested
Comment 13 Eike Rathke (retired, only occasionally showing up) 2014-02-06 16:00:28 UTC
*** Bug 74616 has been marked as a duplicate of this bug. ***
Comment 14 V Stuart Foote 2014-02-06 16:35:56 UTC
In addition to bug 74616 marked duplicate, believe bug 74615 is also related.

In that issue, a referential formula pulling values from another sheet is being corrupted. But that is corrupted formulas versus dropped cell values/formulas.

Likely the same cause though.
Comment 15 Kohei Yoshida 2014-02-06 20:26:45 UTC
I'm looking into it.
Comment 16 Commit Notification 2014-02-06 23:05:09 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=642d0c9abc30b5f9c06abe4d91b55fdf06427ce5

fdo#74553: Write unit test for this.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2014-02-06 23:05:14 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=642d0c9abc30b5f9c06abe4d91b55fdf06427ce5

fdo#74553: Write unit test for this.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2014-02-06 23:05:25 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=16442998b8b6ac7e284ab2377013f36c28b2cb8c

fdo#74553: Use the shared formula column position Excel tells you...



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2014-02-06 23:05:29 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=16442998b8b6ac7e284ab2377013f36c28b2cb8c

fdo#74553: Use the shared formula column position Excel tells you...



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 20 Kohei Yoshida 2014-02-06 23:06:17 UTC
4.2 Backport request: https://gerrit.libreoffice.org/7908
Comment 21 Commit Notification 2014-02-07 08:53:10 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a1c6bed17f373947ee41d395fb380b663fba5d64&h=libreoffice-4-2

fdo#74553: Use the shared formula column position Excel tells you...


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 22 Kohei Yoshida 2014-02-07 13:40:38 UTC
Fixed.
Comment 23 Harald Koester 2014-06-17 21:30:45 UTC
Verified with version 4.2.3. Function works as expected. Hence status set to CLOSED.