fdo#74553: Use the shared formula column position Excel tells you...

Because sometimes this may be correct.

Change-Id: Id2c47bb4ad3f91b366a25306169de58bb38c1e81
(cherry picked from commit 16442998b8b6ac7e284ab2377013f36c28b2cb8c)
Reviewed-on: https://gerrit.libreoffice.org/7908
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>